web-infras/parser/tests/fixtures/babel/es2015/uncategorised/361/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,9)
1|const { await } = foo();
 |       ^
